--- a/app/views/case_studies/index/flite.html.erb
+++ b/app/views/case_studies/index/flite.html.erb
@@ -13,7 +13,7 @@
     <div class="ten columns push-two">
       <div class="row">
         <div class="six columns">
-          <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
+          <p class="show-for-small"><a href="<%= root_path %>">&larr; Back to Home</a></p>
           <h2>Flite</h2>
           <h4 class="subheader">Foundation was the way to go.</h4>
 
