--- a/app/views/case_studies/index/wcb.html.erb
+++ b/app/views/case_studies/index/wcb.html.erb
@@ -36,7 +36,7 @@
         </div>
         <div class="six columns">
           <h4>You Can Hide Things On Phone</h4>
-          <p>What really sold Carl on Foundation, and using it for WCB, was the <a href="http://foundation.zurb.com/docs/elements.php">"hide-on-phone" classes</a>. He found them really useful for essentially hiding bulker elements in a design. This means that Carl's designs looked good on tablets and smart phones. </p>
+          <p>What really sold Carl on Foundation, and using it for WCB, was the <a href="<%=docs_elements_path %>">"hide-on-phone" classes</a>. He found them really useful for essentially hiding bulker elements in a design. This means that Carl's designs looked good on tablets and smart phones. </p>
           
           <h4>A Few Bumps in the Road </h4>
           <p>Carl hit a bump while putting together the page. The bump was with the Orbit slider when just using content, especially when switching from landscape to portrait on the iPad.</p>
