--- a/app/views/case_studies/index/zurbjobs.html.erb
+++ b/app/views/case_studies/index/zurbjobs.html.erb
@@ -14,7 +14,7 @@
     <div class="ten columns push-two">
       <div class="row">
         <div class="six columns">
-          <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
+          <p class="show-for-small"><a href="<%= root_path %>">&larr; Back to Home</a></p>
           <h2>ZURBjobs</h2>
           <h4 class="subheader">Closing the Product Design Talent Gap</h4>
           <p>Lots of companies struggle to find great designers. Every week, clients ask us to recommend a designer for them to hire internally, and with our huge following of talented designers, we knew there had to be an easy way to bring the two together.</p>
@@ -22,7 +22,7 @@
          <p>We launched <a href="http://www.zurbjobs.com">ZURBjobs</a> to help companies find talent in their own quest for world domination. ZURBjobs had to look amazing on every device, so we used Foundation to quickly build the site. Here are some of the highlights of how we built and launched using Foundation.</p>
 
          <h4>Minimal Code Required</h4>
-         <p>Using Foundation, we were able to quickly insert <a href="docs/forms.php">form elements</a> on the site using its preset elements. This kicked us into warp speed &mdash; we didn’t have to code entirely new elements. We simply had to adapt the existing ones with light custom styles.</p>
+         <p>Using Foundation, we were able to quickly insert <a href="<%= docs_forms_path %>">form elements</a> on the site using its preset elements. This kicked us into warp speed &mdash; we didn’t have to code entirely new elements. We simply had to adapt the existing ones with light custom styles.</p>
 
         </div>
         <div class="six columns">
