--- a/app/views/docs/index/forms.html.erb
+++ b/app/views/docs/index/forms.html.erb
@@ -177,7 +177,7 @@
   </div>
 </div><% end %>
 
-        <p><strong>Note:</strong> for these prefix and postfix labels we're using the <a href="grid.php">mobile grid</a> to size our labels correctly on small devices.</p>
+        <p><strong>Note:</strong> for these prefix and postfix labels we're using the <a href="<%= docs_grid_path %>">mobile grid</a> to size our labels correctly on small devices.</p>
 
         <label>Input with a postfix label</label>
         <div class="row">
