--- a/app/views/examples/mobile/_example_2.html.erb
+++ b/app/views/examples/mobile/_example_2.html.erb
@@ -18,7 +18,7 @@
   			<dd><a href="#">Vicunas</a></dd>
   			<dd><a href="#">Other</a></dd>
   		</dl>
-  		<p>You can also use standard tabs on mobile devices, including the built-in tab switching javascript that comes with Foundation. Check out the <a href="docs/tabs.php">tabs documentation</a> for examples of how that works.</p>
+  		<p>You can also use standard tabs on mobile devices, including the built-in tab switching javascript that comes with Foundation. Check out the <a href="<%= docs_tabs_path %>">tabs documentation</a> for examples of how that works.</p>
 
   	</div>
   	<div class="six columns">
