--- a/app/views/features/index/prototyping.html.erb
+++ b/app/views/features/index/prototyping.html.erb
@@ -12,7 +12,7 @@
     <div class="row">
 
       <div class="ten columns push-two">
-        <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
+        <p class="show-for-small"><a href="<%= root_path %>">&larr; Back to Home</a></p>
       	<%= image_tag "feature-prototyping-1.jpg" %>
         <h4>Mockups don't tell a story. Build a prototype in no time.</h4>
         <p>The difference between a good site and a great site is iteration &mdash; building something, playing with it, refining it. In Foundation we've included dozens of styles to help you quickly prototype a site; multiple button sizes and styles, tabs, custom form elements, modal dialogs, image sliders and a lot more. All of the prototype elements are production-ready code, and easy to style up. <a href="docs/elements.php">UI Docs &rarr;</a></p>
