--- a/app/views/features/index/grid.html.erb
+++ b/app/views/features/index/grid.html.erb
@@ -12,10 +12,10 @@
   <div class="row">
 
     <div class="ten columns push-two">
-      <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
+      <p class="show-for-small"><a href="<%= root_path %>">&larr; Back to Home</a></p>
     	<%= image_tag "feature-grid-1.png" %>
       <h4>Flexible, efficient layout.</h4>
-      <p>You've probably used a grid framework before &mdash; we think you'll like this one. It's a 12-column flexible grid that can scale out to an arbitrary size (defined by the max-width of the row) that's also easily nested, so you can build out complicated layouts without creating a lot of custom elements. And when the Grid isn't enough for your site, it just gets out of the way. <br/> <a href="docs/grid.php">Grid docs &rarr;</a></p>
+      <p>You've probably used a grid framework before &mdash; we think you'll like this one. It's a 12-column flexible grid that can scale out to an arbitrary size (defined by the max-width of the row) that's also easily nested, so you can build out complicated layouts without creating a lot of custom elements. And when the Grid isn't enough for your site, it just gets out of the way. <br/> <a href="<%= docs_grid_path %>">Grid docs &rarr;</a></p>
 
       <h4>Examples</h4>
       <div class="row">
