--- a/app/views/features/index/mobile.html.erb
+++ b/app/views/features/index/mobile.html.erb
@@ -12,7 +12,7 @@
   <div class="row">
 
     <div class="ten columns push-two">
-      <p class="show-for-small"><a href="index.php">&larr; Back to Home</a></p>
+      <p class="show-for-small"><a href="<%= root_path %>">&larr; Back to Home</a></p>
     	<%= image_tag "feature-mobile-1.jpg" %>
       <h4>Build for the future.</h4>
       <p>Mobile devices are already eclipsing desktops in adoption and internet use &mdash; that's why Foundation was built from the ground up to support any kind of device, any size screen, with any resolution. You can get going quickly by building once for all devices, or you can create a site tailored to a specific experience. We've even included CSS styles to hide and show elements on different device types, so you can easily turn pieces on and off for each experience.</p>
