Add CSS to fix layout

--- a/app/views/layouts/docs/application.html.erb
+++ b/app/views/layouts/docs/application.html.erb
@@ -21,6 +21,7 @@
 	<%= stylesheet_link_tag    "docs" %>
   <%= stylesheet_link_tag "http://www.zurb.com/assets/foundation.top-bar.css" %>
   <%= stylesheet_link_tag "http://www.zurb.com/assets/zurb.mega-drop.css" %>
+<%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/foundation/3.2.5/stylesheets/foundation.min.css" %>
   
 	<!-- Included JS Files  -->
 	<%= javascript_include_tag "application" %>
